# xactor-benchmarks

./: Cargo.toml
src/: benches.rs  gen.rs  main.rs  shakespeare_test.rs  square_test.rs  xactor_test.rs
