[package]
name = "xactor-benchmarks"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[lib]
name = "xactor_benchmarks"
path = "src/main.rs"

[[bench]]
name = "actor_comparison"
harness = false
path = "src/benches.rs"

[dependencies]
actix = "0.13.5"
async-trait = "0.1.89"
futures = "0.3.31"
num_cpus = "1.17.0"
shakespeare = "0.1.0-rc1"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }

[dev-dependencies]
criterion = {version = "0.7.0", features = ["async_tokio", "html_reports"] }
num_cpus = "1.17.0"
smol = "2.0.2"
